--- a/login/styles.css
+++ b/login/styles.css
@@ -24,8 +24,8 @@ h1 {
 
 input[type="email"],
 input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    width: -webkit-fill-available;
+    padding: 10px 00px 10px 10px;
     margin: 10px 0;
     border: 1px solid #ddd;
     border-radius: 4px;
